Fix viewport CSS - remove flex, add min dimensions

--- a/src/pages/Testing/Testing.css
+++ b/src/pages/Testing/Testing.css
@@ -193,7 +193,10 @@
 .babylon-viewport {
   width: 100%;
   height: 100%;
-  display: flex;
+  display: block;
+  position: relative;
+  min-width: 400px;
+  min-height: 400px;
 }
 
 .babylon-canvas {
