--- a/src/pages/Testing/Testing.css
+++ b/src/pages/Testing/Testing.css
@@ -193,10 +193,7 @@
 .babylon-viewport {
   width: 100%;
   height: 100%;
-  display: block;
-  position: relative;
-  min-width: 400px;
-  min-height: 400px;
+  display: flex;
 }
 
 .babylon-canvas {
